Update .gitignore and pom.xml files.